- Previous implementation had limitation of producing query plans only for SELECT queries. It was changed so query plan can work for every type of query.
- Query plan executions are wrapped in transaction so they don't change database state.
Thanks to Jaroslaw Jarmolowicz for the patch


Bug fixes:

Postgres Plugin:
- Postgres locks table was not displayed.
Thanks to Jaroslaw Jarmolowicz for the patch

Look-and-Feel Plugin: JTattoo-AluminiumLookAndFeel was not available and logged an exception stack trace during start up.

SQuirreL used log an exception stack trace when 'Keep-Alive' was enabled in Alias properties but no SQL statement was entered. Now SQuirreL issues an understandable message.
  This concerns one discussion entry of bug #1162

3.6.0 (10/12/2014)
==================

Enhancements:

Feature request #443 SQL results have new tab "Rotated table" where rows and columns are swapped.

Charts of SQL results: Plain x-y-charts of pairs of numeric columns can now be created.
  Note: Charts make use of JFreeChart: http://www.jfree.org/jfreechart/)

New right mouse menu entry in SQL results: "Show foreign key references".
 Select one or more cells of a SQL result then choose the right mouse menu to display the foreign references for the selected cells.
 This function is also available in the right mouse menu of tables in the object tree.

SQL result --> Info tab: SQL is now displayed in text field instead of label. Formatting is preserved.

Check boxes to enable / disable navigation from the SQL editor to the object tree by Ctrl+B and Ctrl + mouse click.
  See Menu File --> New Session Properties --> Tab SQL --> Section Jump to object tree
  This will fix bug #982

Patch #66 New toolbar button to clone the current Session with a new connection.
  The button is right next to the new SQL tab button.
  Thanks to Jaroslaw Jarmolowicz for the patch

Patch #67 Session tab tooltip now shows the connections JDBC-URL.
  Thanks to Jaroslaw Jarmolowicz for the patch
