@@ -79,11 +79,11 @@ public class SQLParamExecutionListener extends SQLExecutionAdapter
 	 */
 	public String statementExecuting(String sql) {
 		// log.info("SQL starting to execute: " + sql);
-		StringBuffer buffer = new StringBuffer(sql);
+		StringBuffer buffer = new StringBuffer(sql.replaceAll("--.*", ""));
 		Map<String, String> cache = plugin.getCache();
 		Map<String, String> currentCache = new HashMap<String, String>();
-		Pattern p = Pattern.compile(":[a-zA-Z]\\w+");
-
+		Pattern p = Pattern.compile("[\\ \\(]:[a-zA-Z]\\w+");
+		
 		Matcher m = p.matcher(buffer);
 
 		while (m.find()) {
